# reactjs-rpg-backend

./: README.md  config.py  main.py  pyproject.toml  requirements.txt  teste.py
aplicacao/casos_de_uso/: atualizar_jogador.py
aplicacao/dto/: jogador_dto.py
dominio/entidades/: jogador.py
dominio/repos/: jogador.py
dominio/repositorios/: jogador_repo.py
dominio/servicos/: jogo_servico.py
infra/: firebase.py  item.py  jogador.py
infra/repos/: jogador.py
infraestrutura/: banco_dados.py
infraestrutura/repositorios_impl/: jogador_repo_impl.py
interfaces/roteadores/: inventario.py  jogador.py
roteadores/: inicial.py  item.py  jogador.py
