[project]
name = "reactjs-rpg-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuri Donato",email = "102886538+YuriDonato@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
